--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Safacation</string>
     <string name="location">Location</string>
+    <string name="address">Aderess</string>
     <string name="health_guidance">Health Guidance</string>
 </resources>
