Menambahkan  Teks Health di string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,14 @@
     <string name="location">Location</string>
     <string name="address">Aderess</string>
     <string name="health_guidance">Health Guidance</string>
+    <string name="deskripsi">Deskripsi lokasi</string>
+
+    <!--Teks Health -->
+    <string name="helath1">Cuci Tangan</string>
+    <string name="helath2">Ya Jaga Jarak</string>
+    <string name="helath3">Makan Vitamin</string>
+
+    <string name="deskrpsi1">Untuk menghindari penularan penyakit melalui tangan. Untuk menjaga kebersihan diri (perorangan) Untuk membuat tubuh kita tetap sehat dan bugar. Supaya tidak menjadi agen penularan bibit penyakit kepada orang lain.</string>
+    <string name="deskrpsi2">Menjaga jarak atau physical distancing, sebagai bagian dari protokol kesehatan dalam upaya pencegahan penyebaran COVID-19 menjadi penting untuk dilakukan. Sebagaimana menurut rekomendasi dari Badan Kesehatan Dunia (WHO)</string>
+    <string name="deskrpsi3">Vitamin memiliki berbagai fungsi yang membantu mengatur metabolisme, mencegah penyakit kronis (seperti penyakit jantung dan kanker) dan untuk memelihara nafsu makan, kesehatan mental dan kekebalan tubuh.</string>
 </resources>
